- adding js profile checks for updating values